# reflective-loader

./: CMakeLists.txt  README.md
include/: remote.h  util.h
src/: local.c  local.h  main.c  remote.c  util.c
